--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <script src="script.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
-    <div id="display">display</div>
-    <button class="digit">1</button>
-    <button class="digit">2</button>
-    <button class="digit">3</button>
-    <button class="digit">4</button>
-    <button class="digit">5</button>
-    <button class="digit">6</button>
-    <button class="digit">7</button>
-    <button class="digit">8</button>
-    <button class="digit">9</button>
-    <button class="digit">0</button>
-    <button class="operator">+</button>
-    <button class="operator">-</button>
-    <button class="operator">x</button>
-    <button class="operator">÷</button>
-    <button class="equals">=</button>
+    <div id="calculator">
+        <div id="display">display</div>
+        <div id="buttons">
+            <button class="digit">1</button>
+            <button class="digit">2</button>
+            <button class="digit">3</button>
+            <button class="digit">4</button>
+            <button class="digit">5</button>
+            <button class="digit">6</button>
+            <button class="digit">7</button>
+            <button class="digit">8</button>
+            <button class="digit">9</button>
+            <button class="digit">0</button>
+            <button class="operator">+</button>
+            <button class="operator">-</button>
+            <button class="operator">x</button>
+            <button class="operator">÷</button>
+            <button class="equals">=</button>
+        </div>
+    </div>
 </body>
 </html>
