--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
     <div id="calculator">
         <div id="display">display</div>
         <div id="buttons">
-            <button class="digit">1</button>
-            <button class="digit">2</button>
-            <button class="digit">3</button>
-            <button class="digit">4</button>
-            <button class="digit">5</button>
-            <button class="digit">6</button>
-            <button class="digit">7</button>
-            <button class="digit">8</button>
-            <button class="digit">9</button>
-            <button class="digit">0</button>
-            <button class="operator">+</button>
-            <button class="operator">-</button>
-            <button class="operator">x</button>
-            <button class="operator">÷</button>
-            <button class="equals">=</button>
+            <button class="button">1</button>
+            <button class="button">2</button>
+            <button class="button">3</button>
+            <button class="button">4</button>
+            <button class="button">5</button>
+            <button class="button">6</button>
+            <button class="button">7</button>
+            <button class="button">8</button>
+            <button class="button">9</button>
+            <button class="button">0</button>
+            <button class="button">+</button>
+            <button class="button">-</button>
+            <button class="button">x</button>
+            <button class="button">÷</button>
+            <button class="button">=</button>
         </div>
+        <button id="clear" class="button">clear</button>
     </div>
 </body>
 </html>
