--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 </head>
 <body>
     <div id="calculator">
-        <div id="display">display</div>
+        <div id="display">0</div>
         <div id="buttons">
-            <button class="button">1</button>
-            <button class="button">2</button>
-            <button class="button">3</button>
-            <button class="button">4</button>
-            <button class="button">5</button>
-            <button class="button">6</button>
-            <button class="button">7</button>
-            <button class="button">8</button>
-            <button class="button">9</button>
-            <button class="button">0</button>
-            <button class="button">+</button>
-            <button class="button">-</button>
-            <button class="button">x</button>
-            <button class="button">÷</button>
-            <button class="button">=</button>
+            <button class="digit" class="button">1</button>
+            <button class="digit" class="button">2</button>
+            <button class="digit" class="button">3</button>
+            <button class="digit" class="button">4</button>
+            <button class="digit" class="button">5</button>
+            <button class="digit" class="button">6</button>
+            <button class="digit" class="button">7</button>
+            <button class="digit" class="button">8</button>
+            <button class="digit" class="button">9</button>
+            <button class="digit" class="button">0</button>
+            <button class="operator" class="button">+</button>
+            <button class="operator" class="button">-</button>
+            <button class="operator" class="button">x</button>
+            <button class="operator" class="button">÷</button>
+            <button id="equals" class="button">=</button>
+            <button id="clear" class="button">clear</button>
         </div>
-        <button id="clear" class="button">clear</button>
     </div>
 </body>
 </html>
